assets/admin/css/admin.css
/* ... */
.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately > img {
    display: inline-block;
    vertical-align: middle;
    width: 35%;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-title {
    font-size: 56px;
    font-weight: 700;
    color: #041137;
    line-height: 70px;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-title .eael-quick-setup-highlighted-red {
    color: #ff5a72;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-text {
    font-size: 20px;
    font-weight: 400;
    line-height: 1.4;
    color: #727272;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list {
    list-style: none;
    padding-left: 0;
    margin-top: 45px;
    margin-bottom: 20px;
    display: grid;
    grid-template-columns: auto auto;
    gap: 16px;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list .eael-quick-setup-list-item {
    font-size: 16px;
    line-height: 50px;
    font-weight: 400;
    color: #041137;
    border-radius: 4px;
    background: #F7F4FF;
    margin: 0;
    padding-left: 17px;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list .eael-quick-setup-list-item svg {
    margin-right: 5px;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list .eael-quick-setup-list-item:nth-child(2) {
    background: #FFF8F0;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list .eael-quick-setup-list-item:nth-child(3) {
    background: #FFFAFA;
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list .eael-quick-setup-list-item:nth-child(4) {
    background: #F1FAFF;
}

@media (min-width: 992px) and (max-width: 1299px) {
    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately > div {
        width: 60%;
        vertical-align: middle;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-title {
        font-size: 45px;
        width: 550px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-text {
        font-size: 18px;
        width: 550px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list {
        margin-bottom: 20px;
        grid-template-columns: auto;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list .eael-quick-setup-list-item {
        width: 320px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately > img {
        vertical-align: bottom;
        width: 40%;
    }
}

@media (min-width: 768px) and (max-width: 991px) {
    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately > div {
        width: calc(100% - 240px);
        padding-top: 30px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately > img {
        vertical-align: top;
        width: 230px;
        margin-left: 10px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-title {
        font-size: 34px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-text {
        max-width: 450px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list {
        margin-bottom: 20px;
        width: 630px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list .eael-quick-setup-list-item {
        font-size: 15px;
    }
}

@media (max-width: 767px) {
    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately > div {
        width: 100%;
        padding-right: 5%;
        padding-top: 20px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately > img {
        display: block;
        width: auto;
        margin: 0 auto;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-title {
        font-size: 35px;
        line-height: 50px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list {
        margin-top: 30px;
        grid-template-columns: auto;
        max-width: 300px;
    }

    .eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.templately .eael-quick-setup-list .eael-quick-setup-list-item {
        font-size: 12px;
        line-height: 40px;
        padding-left: 5px;
        position: relative;
    }

    span.eael-quick-setup-icon {
        position: absolute;
        top: -15px;
    }
}

.eael-quick-setup-body .eael-quick-setup-wizard-form .eael-quick-setup-tab-content.integrations .eael-quick-setup-admin-block-wrapper {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: (1fr)[4];
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 15px;
}
/* ... */

